# cmake-externalLibs

download_sharedLib_as_subdir/: CMakeLists.txt
fetch_content_sharedLib/: CMakeLists.txt
